IRIS-3963 | refactor and re-indent GraphApi